feat: Spotify 인증 URL 생성 기능 추가 및 관련 유틸리티 함수 구현

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 REACT_APP_SPOTIFY_CLIENT_ID=1e868bbbb5e4429086c6a6cfe2b17aee
 REACT_APP_SPOTIFY_SECRET_ID=8124c6d5dce14d22807df98804b68a4c
 SPOTIFY_BASE_URL=https://api.spotify.com/v1
+REACT_APP_REDIRECT_URI=http://localhost:3000
